--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon-h.svg" />
-    <title>Humanitarian Dashboard</title>
-    <meta name="description" content="Humanitarian Dashboard" />
-    <meta name="author" content="Humanitarian Dashboard" />
+    <title>Aegis - Humanitarian Dashboard</title>
+    <meta name="description" content="Aegis - Humanitarian Dashboard" />
+    <meta name="author" content="Aegis - Humanitarian Dashboard" />
 
-    <meta property="og:title" content="Humanitarian Dashboard" />
-    <meta property="og:description" content="Humanitarian Dashboard" />
+    <meta property="og:title" content="Aegis - Humanitarian Dashboard" />
+    <meta property="og:description" content="Aegis - Humanitarian Dashboard" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon-h.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@HumanitarianDashboard" />
+    <meta name="twitter:site" content="@AegisDashboard" />
     <meta name="twitter:image" content="/favicon-h.svg" />
   </head>
 
