--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-h.svg" />
-    <title>Aegis - Humanitarian Dashboard</title>
-    <meta name="description" content="Aegis - Humanitarian Dashboard" />
-    <meta name="author" content="Aegis - Humanitarian Dashboard" />
+    <link rel="icon" type="image/svg+xml" href="/aegis-rusted-shield.svg" />
+    <title>Aegis</title>
+    <meta name="description" content="Aegis" />
+    <meta name="author" content="Aegis" />
 
-    <meta property="og:title" content="Aegis - Humanitarian Dashboard" />
-    <meta property="og:description" content="Aegis - Humanitarian Dashboard" />
+    <meta property="og:title" content="Aegis" />
+    <meta property="og:description" content="Aegis" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon-h.svg" />
+    <meta property="og:image" content="/aegis-rusted-shield.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AegisDashboard" />
-    <meta name="twitter:image" content="/favicon-h.svg" />
+    <meta name="twitter:image" content="/aegis-rusted-shield.svg" />
   </head>
 
   <body>
